RouteLogic-v4.0.0/force-app/main/default/objects/RouteLogic_Configuration__mdt/RouteLogic_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>RouteLogic Configuration</label>
    <pluralLabel>RouteLogic Configurations</pluralLabel>
    <description>Configuration settings for RouteLogic Enhanced v4.0.0 including provider settings, routing rules, and system parameters</description>
</CustomObject>