RouteLogic-v4.0.0/force-app/main/default/objects/RouteLogic_Configuration__mdt/fields/Configuration_Type__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Type__c</fullName>
    <label>Configuration Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Provider_Settings</fullName>
                <label>Provider Settings</label>
            </value>
            <value>
                <fullName>Routing_Rules</fullName>
                <label>Routing Rules</label>
            </value>
            <value>
                <fullName>System_Parameters</fullName>
                <label>System Parameters</label>
            </value>
            <value>
                <fullName>Security_Settings</fullName>
                <label>Security Settings</label>
            </value>
            <value>
                <fullName>Integration_Settings</fullName>
                <label>Integration Settings</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Type of configuration setting</description>
</CustomField>