RouteLogic-v4.0.0/force-app/main/default/objects/RouteLogic_Configuration__mdt/fields/Configuration_Value__c.field-meta.xml
<CustomField>
    <fullName>Configuration_Value__c</fullName>
    <label>Configuration Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
    <description>Configuration value (encrypted for sensitive data)</description>
</CustomField>