RouteLogic-v4.0.0/force-app/main/default/objects/RouteLogic_Configuration__mdt/fields/Environment__c.field-meta.xml
<CustomField>
    <fullName>Environment__c</fullName>
    <label>Environment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Production</fullName>
                <default>true</default>
                <label>Production</label>
            </value>
            <value>
                <fullName>Sandbox</fullName>
            </value>
            <value>
                <fullName>Development</fullName>
            </value>
            <value>
                <fullName>All</fullName>
                <label>All Environments</label>
            </value>
        </valueSetDefinition>
    </valueSet>
    <description>Environment where this configuration applies</description>
</CustomField>