RouteLogic-v4.0.0/force-app/main/default/objects/RouteLogic_Configuration__mdt/fields/Is_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>Is_Encrypted__c</fullName>
    <label>Is Encrypted</label>
    <defaultValue>false</defaultValue>
    <type>Checkbox</type>
    <description>Indicates if the configuration value is encrypted</description>
</CustomField>